examples/test/testpolicy4227.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4227
  namespace: namespace51
spec:
  podSelector:
    matchLabels:
      key17: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value47
          key27: value15
      podSelector:
        matchLabels:
          key9: value32
          key37: value46
          key34: value36
